# simCmd

./: .gitignore  .gitmodules  CMakeLists.txt  ConsoleREPL.cpp  ConsoleREPL.h  PersistentOptions.cpp  PersistentOptions.h  PersistentOptions.list  QCommanderWidget.cpp  QCommanderWidget.h  README.md  SIM.cpp  SIM.h  TODO.md  UI.cpp  UI.h  UIFunctions.cpp  UIFunctions.h  UIProxy.cpp  UIProxy.h  callbacks.xml  debug.h  license.txt  luarocks.md  plugin.cpp  plugin.h  qcommandedit.cpp  qcommandedit.h  qcommanderwidget.cpp  qcommanderwidget.h  qluacommanderwidget.cpp  qluacommanderwidget.h  simAddOnCommander.lua  simAddOnLua Commander.lua  simCmd.lua  simExtLuaCommander.lua  simLuaCmd.lua
addOns/: Commander.lua
cmake/modules/: FindReadline.cmake
lua/: simCmd.lua
sourceCode/: ConsoleREPL.cpp  SIM.cpp  SIM.h  UI.h  callbacks.xml  plugin.cpp  qcommandedit.cpp  qcommanderwidget.cpp  qcommanderwidget.h
test/: getCallContext.lua  getCallContexts.lua
